--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -2,13 +2,17 @@
   "name": "backend-server",
   "version": "1.0.0",
   "description": "A server that provides geolocation information based on IP addresses",
-  "main": "index.js", 
+  "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Akshay Kannan",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
-  } 
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1" 
+  }
 }
