--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -10,9 +10,10 @@
   "author": "Akshay Kannan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1" 
+    "nodemon": "^3.0.1"
   }
 }
