--- a/backend-server/package.json
+++ b/backend-server/package.json
@@ -4,7 +4,7 @@
   "description": "A server that provides geolocation information based on IP addresses",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Akshay Kannan",
